iPhone static library is getting generated when there is a space in folder.